--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\"",
+		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"dependencies": {
 		"react": "^18.2.0",
@@ -25,6 +25,7 @@
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-react": "^7.32.2",
 		"prettier": "2.8.7",
+		"sass": "^1.61.0",
 		"typescript": "^5.0.4",
 		"vite": "^4.2.0"
 	}
