--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\""
 	},
 	"dependencies": {
+		"classnames": "^2.3.2",
+		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
