--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "haki-ui",
-	"private": true,
+	"private": false,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc && vite build",
+		"build": "tsc && vite build --minify=false",
 		"preview": "vite preview",
 		"format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,md}\""
 	},
